# STAT_362_Final_Project

./: .gitignore  README.md  fan_sentiment_analysis.ipynb  final_project_presentation.pptx  pyproject.toml  reddit_data_scrapping.ipynb  sentiment_analysis.ipynb  ~$final_project_presentation.pptx
Data/: best_sentiment_model_history.json  tokenization_dictionary.json
