[project]
name = "stat-362-final-project"
version = "0.1.0"
description = "Final project for NU STAT 362 Fall 2025"
authors = [
    {name = "OwenHHHH",email = "owenhandelman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "praw (>=7.8.1,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "datetime (>=6.0,<7.0)",
    "torch (>=2.9.1,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ekphrasis (>=0.5.4,<0.6.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
